--- a/drivers/hid/Kconfig
+++ b/drivers/hid/Kconfig
@@ -1397,4 +1397,6 @@ source "drivers/hid/usbhid/Kconfig"
 
 source "drivers/hid/spi-hid/Kconfig"
 
+source "drivers/hid/dockchannel-hid/Kconfig"
+
 endif # HID_SUPPORT
