--- a/arch/arm64/boot/dts/apple/t602x-die0.dtsi
+++ b/arch/arm64/boot/dts/apple/t602x-die0.dtsi
@@ -236,6 +236,10 @@
 		mbox-names = "mbox";
 		iommus = <&aop_dart 0>;
 
+		/* HACK: ensure probe order */
+		dmas = <&aop_admac 1023>;
+		dma-names = "invalid-order-only";
+
 		apple,aop-target = <0>;
 		apple,aop-alignment = <64>;
 		status = "disabled";
