--- a/arch/arm64/boot/dts/apple/t8112.dtsi
+++ b/arch/arm64/boot/dts/apple/t8112.dtsi
@@ -1484,6 +1484,10 @@
 			mbox-names = "mbox";
 			iommus = <&aop_dart 0>;
 
+			/* HACK: ensure probe order */
+			dmas = <&aop_admac 1023>;
+			dma-names = "invalid-order-only";
+
 			apple,aop-target = <0>;
 			apple,aop-alignment = <128>;
 			status = "disabled";
